<?xml version="1.0"?>
<package format="2">
  <name>localization_srvs</name>
  <version>0.1.0</version>
  <description>The localization_srvs package</description>

  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>

</package>